Added bootstrap script

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,9 @@ block header
 		button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 			span.sr-only Toggle Navigation
 			span.icon-bar
-	div(class='collapse navbar-collapse')
+			span.icon-bar
+			span.icon-bar
+	div(class='navbar-collapse collapse')
 		ul(class='nav navbar-nav')
 			li
 				a(href='/', class='btn btn-default navbar-btn')
