--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -1,5 +1,6 @@
 script(src='/js/jquery-1.11.1.min.js')
 script(src='/js/angular.min.js')
+script(src='/js/bootstrap.min.js')
 script(src='/js/app.js')
 script(src='/js/services.js')
 script(src='/js/controllers.js')
