--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(ng-app='auditApp', manifest='/offline.appcache')
 		link(rel='stylesheet', href='/css/site.css')
 		
 	body(ng-controller='MainController')
-		div(class='navbar navbar-default navbar-static-top', role='navigation')
+		div.navbar.navbar-default.navbar-static-top(role='navigation')
 			div.container
 				block header
 		
