--- a/views/error.jade
+++ b/views/error.jade
@@ -1,15 +1,9 @@
 extends layout
 
 block header
-	div.navbar-header
-		button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-			span.sr-only Toggle Navigation
-			span.icon-bar
-	div(class='collapse navbar-collapse')
-		ul(class='nav navbar-nav')
-			li
-				a(href='/', class='btn btn-default navbar-btn')
-					span(class='glyphicon glyphicon-home')  Home
+	div.navbar-header.pull-left
+		a.btn.btn-default.btn-lg.navbar-btn(href='/')
+			span.glyphicon.glyphicon-home  Home
 					
 block content	
 	h1 There has been an error with your request.
