--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -1,10 +1,11 @@
 script(src='/js/jquery-1.11.1.min.js')
 script(src='/js/angular.min.js')
 script(src='/js/bootstrap.min.js')
+script(src='/js/bootstrap-filestyle.min.js')
 script(src='/js/app.js')
 script(src='/js/services.js')
 script(src='/js/controllers.js')
 script(src='/js/filters.js')
 script(src='/js/angular-toggle-switch.min.js')
 script(src='/js/directives.js')
-
+script(src='/js/init.js')
