--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,11 +1,15 @@
 #footer {
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 60px;
+	background-color: #f5f5f5;
 }
 
 .container .text-muted {
-  margin: 20px 0;
+	margin: 20px 0;
+}
+
+.navbar-btn { 
+	margin: 8px;
 }
