--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8,8 +8,9 @@
 
 .container .text-muted {
 	margin: 20px 0;
+	text-align: center;
 }
 
 .navbar-btn { 
-	margin: 8px;
+	margin: 8px 3px 8px 3px;
 }
