Hide upload button and file upload when offline

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,4 +35,4 @@ block content
 						
 	div.row
 		p.col-md-12
-			input(type='file', accept='image/*;capture=camera')
+			input#fileUpload(type='file', accept='image/*;capture=camera')
