--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,11 @@ block header
 		a.btn.btn-default.btn-md.navbar-btn(href='/')
 			span.glyphicon.glyphicon-home
 		button.btn.btn-default.btn-md.navbar-btn#onlineStatus
-			span.glyphicon.glyphicon-globe
+			span.glyphicon.glyphicon-globe(title='Connectivity Status')
+		button.btn.btn-default.btn-md.navbar-btn.btn-warning#downloadButton
+			span.glyphicon.glyphicon-download(title='Update Available')
+		button.btn.btn-default.btn-md.navbar-btn.btn-success#latestButton
+			span.glyphicon.glyphicon-ok(title='Cache is up to date')
 	div.navbar-header.pull-right	
 		a.btn.btn-default.btn-md.navbar-btn#uploadButton(ng-click='upload(responses)')
 			span.glyphicon.glyphicon-upload  Upload	
