--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -1,6 +1,8 @@
 script(src='/js/jquery-1.11.1.min.js')
 script(src='/js/angular.min.js')
+script(src='/js/angular-route.min.js')
 script(src='/js/bootstrap.min.js')
+script(src='/js/ui-bootstrap-tpls-0.11.0.min.js')
 script(src='/js/app.js')
 script(src='/js/services.js')
 script(src='/js/directives.js')
